[package]
name = "maikor-vm-file"
version = "0.1.5"
edition = "2021"
authors = ["Ray Britton <raybritton@pm.me>"]
description = "VM for playing Maikor games"
license = "MIT"
repository = "https://github.com/MaikorAppPublic/vm-file"
readme = "README.md"
homepage = "https://maikor.app"

[dependencies]
maikor-platform = "0.1.17"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
fastrand = "1.7.0"