[package]
name = "maikor-vm-file"
version = "0.1.10"
edition = "2021"
authors = ["Ray Britton <raybritton@pm.me>"]
description = "VM for playing Maikor games"
license = "MIT"
repository = "https://github.com/MaikorAppPublic/vm-file"
readme = "README.md"
homepage = "https://maikor.app"

[dependencies]
maikor-platform = "0.1.29"
thiserror = "1.0.31"
serde = {version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"